--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>GOODDAY LELE HAPPY VALENTINE'S DAY</span>
+        <span>GOODDAY STEPHY HAPPY VALENTINE'S DAY</span>
         <br>
         <span>hoping na sana maappreciate mo tong gift na to</span>
         <br>
-        <span>alam mo namn na gusto kita bigyan ng flowers </span>
+        <span>alam mo sa sarili mo na deserve mo mabigyan </span>
         <br>
-        <span>ngunit hindi ko alam kung saan ipapadala hahahaha</span>
+        <span>ng flowers, stay what you are wag papakastress </span>
+        <br>
+        <span>just enjor your day. </span>
     </div>
+    <br>
     <div class="button">
         <button>
             <a href="flower.html">CLICK NOW TO VIEW</a>
